# aml-agent

./: .gitignore  README.md
agent/: .env.example  .gitignore  README.md  pyproject.toml
agent/aml_agent/: __init__.py
agent/aml_agent/config/: __init__.py  settings.py
agent/aml_agent/core/: __init__.py  workflow.py
agent/aml_agent/core/agents/: __init__.py  evaluator.py  executor.py  orchestrator.py  planner.py
agent/aml_agent/core/conversation/: __init__.py  conversation_manager.py
agent/aml_agent/core/memory/: __init__.py  memory_manager.py
agent/aml_agent/tools/: __init__.py  mcp_client.py  rag_client.py
agent/aml_agent/ui/: __init__.py  cli.py  ui_controller.py
agent/aml_agent/utils/: __init__.py  logging.py  timed_cache.py
agent/docs/: application_design.md  design.md  technical_design.md
rag/: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  setup.bat  setup.sh
rag/data/indexed_documents/: .gitkeep
rag/docs/: design.md
rag/src/: __init__.py  add_document.py  config.py  main.py  schedule_scanner.py
rag/src/api/: __init__.py  routes.py
rag/src/db/: __init__.py  vector_db.py
rag/src/scanner/: __init__.py  document_scanner.py
